--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-common:2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.4'
     implementation 'org.modelmapper:modelmapper:3.1.1'
     compileOnly 'org.projectlombok:lombok'
