--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.4'
-    implementation 'org.modelmapper:modelmapper:3.1.1'
+    implementation 'org.mapstruct:mapstruct:1.4.0.Final'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.0.Final'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation 'io.r2dbc:r2dbc-h2'
