FEATURE: Ensure strong passwords at API level

--- a/api/open-api.spec.yaml
+++ b/api/open-api.spec.yaml
@@ -162,6 +162,7 @@ components:
         password:
           description: Safebox Password
           type: string
+          pattern: '^(?=.*[A-Z])(?=.*[!@#$&*])(?=.*\d)(?=.*[a-z]).{8,}$'
       required:
         - name
         - password
