FEATURE: Added and inferred way to generate the schema and add test data only when necessary

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,3 +8,4 @@ spring:
     user: user
     password: password
     driver-class-name: org.h2.Driver
+    change-log: classpath:/db/changelog/db.changelog-test-master.yaml
