FEATURE: Added test data

--- a/src/test/resources/db/changelog/db.changelog-test-data.yaml
+++ b/src/test/resources/db/changelog/db.changelog-test-data.yaml
@@ -7,8 +7,20 @@ databaseChangeLog:
             tableName: SAFEBOX
             columns:
               - column:
+                  name: _ID
+                  valueNumeric: 1000001
+              - column:
                   name: _NAME
                   value: EXISTING_SAFEBOX
               - column:
                   name: _PASSWORD
                   value: EXISTING_SAFEBOX
+        - insert:
+            tableName: ITEM
+            columns:
+              - column:
+                  name: _CONTENT
+                  value: EXISTING_ITEM
+              - column:
+                  name: SAFEBOX_ID
+                  valueNumeric: 1000001
