FEATURE: Skip generation of default methods in API interface

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ tasks.register('buildServer', GenerateTask) {
     modelNameSuffix = "Dto"
     configOptions = [
             interfaceOnly                 : "true",
+            skipDefaultInterface          : "true",
             performBeanValidation         : "true",
             useSpringBoot3                : "true",
             reactive                      : "true",
