--- a/src/test/resources/db/changelog/db.changelog-test-data.yaml
+++ b/src/test/resources/db/changelog/db.changelog-test-data.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: _ID
-                  valueNumeric: 1000001
+                  valueNumeric: "1000001"
               - column:
                   name: _NAME
                   value: EXISTING_SAFEBOX
@@ -23,4 +23,4 @@ databaseChangeLog:
                   value: EXISTING_ITEM
               - column:
                   name: SAFEBOX_ID
-                  valueNumeric: 1000001
+                  valueNumeric: "1000001"
