--- a/build.gradle
+++ b/build.gradle
@@ -31,15 +31,19 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springdoc:springdoc-openapi-starter-common:2.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.1'
-    implementation 'org.openapitools:jackson-databind-nullable:0.2.4'
-    implementation 'org.mapstruct:mapstruct:1.4.0.Final'
-    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
+    // Map Struct
+    implementation 'org.mapstruct:mapstruct:1.4.0.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.0.Final'
+    // API First
+    implementation 'org.openapitools:jackson-databind-nullable:0.2.4'
     // Testing
     testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
